stderr
JudgeMan.java:38: error: reached end of file while parsing
}
 ^
1 error
